Update .gitignore to exclude example-package, add Laravel service provider to composer.json, and remove unused admin-panel Blade template.

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,13 @@
             "Vormia\\UILivewireFluxAdmin\\Tests\\": "tests/"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Vormia\\UILivewireFluxAdmin\\UILivewireFluxAdminServiceProvider"
+            ]
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
