Update composer.json to allow for multiple versions of vormiaphp/vormia and format README.md for consistency in admin-panel component usage.

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "vormiaphp/vormia": "^1.0",
+        "vormiaphp/vormia": "^2.0 || ^3.0 || ^4.0",
         "livewire/volt": "^1.0"
     },
     "suggest": {
