Update dependency checks in commands and README.md to reflect removal of 'authority' middleware from route definitions. Adjust composer.json to exclude 'src/stubs/' from classmap autoloading.

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
     "autoload": {
         "psr-4": {
             "Vormia\\UILivewireFluxAdmin\\": "src/"
-        }
+        },
+        "exclude-from-classmap": [
+            "src/stubs/"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
